<resources>
    <string name="app_name">Notes App</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="add_note">Add Note.</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="edit_note">Edit Note.</string>
    <string name="note_title">Note Title</string>
    <string name="description">Description</string>
    <string name="edtFab">editFab</string>
</resources>